--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
@@ -16,7 +16,7 @@
 <div class="right">
     <h3>{% trans "Description:" %}</h3>
         <p>{% trans "Specify the details for launching an instance. Also please make note of the table below; all tenants have quotas which define the limit of resources they are allowed to provision." %}</p>
-        <table border="0">
+        <table class="table table-striped table-bordered">
           <tr>
             <th>{% trans "Quota Name" %}</th>
             <th>{% trans "Limit" %}</th>
