--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_no_instances.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_no_instances.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="alert-message block-message info">
+<div class="alert alert-block alert-info">
   <p><strong>{% trans "Info: " %}</strong>{% trans "There are no instances running. Launch an instance from the Images Page." %}</p>
   <div class="alert-actions">
     <a class="btn small primary" href='{% url horizon:nova:images_and_snapshots:index %}'>{% trans "Images Page" %}</a>
