--- a/horizon/horizon/dashboards/nova/templates/nova/networks/detail.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/networks/detail.html
@@ -13,7 +13,7 @@
     {% include 'nova/networks/_detail.html' %}
     <a id="network_create_link" class="btn small" href="{% url horizon:nova:networks:port_create network.id %}">{% trans "Create Ports" %}</a>
   {% else %}
-    <div class="alert-message block-message info">
+    <div class="alert alert-block alert-info">
      <h2>{% trans "Info" %}</h2>
      <p>{% trans "There are currently no ports in this network." %} <a class='btn small' href="{% url horizon:nova:networks:port_create network.id %}">{% trans "Create Ports" %}</a></p>
     </div>
