--- a/horizon/horizon/dashboards/nova/templates/nova/overview/usage.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/overview/usage.html
@@ -46,7 +46,7 @@
       <h3>Server Usage Summary</h3>
     </div>
 
-    <table class="zebra-striped">
+    <table class="table table-striped table-bordered">
       <tr id='headings'>
         <th>{% trans "Name" %}</th>
         <th>{% trans "User" %}</th>
