--- a/horizon/horizon/templates/horizon/common/_data_table_row_actions.html
+++ b/horizon/horizon/templates/horizon/common/_data_table_row_actions.html
@@ -1,15 +1,27 @@
 {% load horizon %}
 
-{% if row_actions %}
-<ul class="row_actions unstyled clearfix{% if row_actions|length == 1 %} single{% endif %}">
-{% for action in row_actions %}
-    <li class="action{% if forloop.first and row_actions|length > 1 %} primary{% endif %}">
-        {% if action.method != "GET" %}
-            <button {{ action.attr_string }} name="action" value="{{ action.table.name }}__{{ action.name }}__{{ row_id }}" type="submit">{{ action.verbose_name }}</button>
+{% if row_actions|length > 1 %}
+<div class="btn-group">
+    {% for action in row_actions %}
+        {% if forloop.first %}
+          {% include "horizon/common/_data_table_row_action.html" %}
+          <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu row_actions clearfix">
         {% else %}
-            <a href='{{ action.bound_url }}' {{ action.attr_string|safe }}>{{ action.verbose_name }}</a>
+          <li class="clearfix">
+              {% include "horizon/common/_data_table_row_action.html" %}
+          </li>
         {% endif %}
-    </li>
-{% endfor %}
-</ul>
+        {% if forloop.last %}
+          </ul>
+        {% endif %}
+    {% endfor %}
+</div>
+{% endif %}
+{% if row_actions|length == 1%}
+  {% for action in row_actions %}
+    {% include "horizon/common/_data_table_row_action.html" %}
+  {% endfor %}
 {% endif %}
