--- a/horizon/horizon/templates/horizon/common/_modal_form.html
+++ b/horizon/horizon/templates/horizon/common/_modal_form.html
@@ -1,6 +1,6 @@
 <div id="{% block modal_id %}{% endblock %}" class="{% block modal_class %}modal{% if hide %} hide {% else %} static_page{% endif %}{% endblock %}">
   <div class="modal-header">
-    {% if hide %}<a href="#" class="close">&times;</a>{% endif %}
+    {% if hide %}<a href="#" class="close" data-dismiss="modal">&times;</a>{% endif %}
     <h3>{% block modal-header %}{% endblock %}</h3>
   </div>
   {% if table %}
