Removes max-height from modals. Fixes bug 921733.
Change-Id: I852e703011825cbd4abcf562e4b9ca77f0bf1bd4

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -595,6 +595,7 @@ table form {
 
 .modal {
     width: 700px;
+    max-height: none; /* Prevents large modals from scrolling unnecessarily */
     top: 80px;
     margin-top: 0;
     position: absolute;
