--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -754,6 +754,22 @@ td.actions_column {
   min-height: 20px;
 }
 
+td.actions_column .row_actions a,
+td.actions_column .row_actions input,
+td.actions_column .row_actions button {
+  background: none;
+  float: none;
+  display: block;
+  padding: 5px 10px;
+  color: black;
+  text-align: left;
+  border-radius: 0;
+  border: 0 none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+
 /* Makes size consistent across browsers when mixing "btn-group" and "small" */
 .btn-group > .btn.small {
   height: 12px;
@@ -768,27 +784,32 @@ td.actions_column {
 }
 .dropdown-menu button {
   line-height: 18px; /* Matches rule for ".dropdown-menu a" in bootstrap */
+  width: 100%;
 }
-
-td.actions_column ul.row_actions li:hover {
-  background-color: #cdcdcd;
-}
-
-td.actions_column ul.row_actions a,
-td.actions_column ul.row_actions input,
-td.actions_column ul.row_actions button {
-  background: none;
-  float: none;
-  display: block;
-  padding: 5px 10px;
-  color: black;
-  text-align: left;
+.btn-group .dropdown-menu .btn {
   border-radius: 0;
-  border: 0 none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
 }
+.dropdown-menu .btn.danger,
+.dropdown-menu .btn.danger:hover,
+.dropdown-menu .btn.success,
+.dropdown-menu .btn.success:hover,
+.dropdown-menu .btn.info, .btn.info:hover {
+  text-shadow: none; /* remove default bootstrap shadowing from button text. */
+}
+.dropdown-menu li:hover {
+  background: none;
+}
+td.actions_column .dropdown-menu a:hover,
+td.actions_column .dropdown-menu button:hover {
+  background-color: #CDCDCD;
+}
+.dropdown-menu .btn.danger {
+  color: #C43C35;
+}
+.dropdown-menu .btn.danger:hover {
+  background-color: #f6e0df;
+}
+
 
 /* Overrides for single-action rows (no dropdown) */
 
