Adds title to tenant edit modal. Fixes bug 922350.
Change-Id: Ib1a9377f772e0066c849fc1a0ef813e1e4d75e34

--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_update.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_update.html
@@ -4,7 +4,8 @@
 {% block form_id %}{% endblock %}
 {% block form_action %}{% url horizon:syspanel:tenants:update tenant.id %}{% endblock %}
 
-{% block modal-header %}{% endblock %}
+{% block modal_id %}update_tenant_modal{% endblock %}
+{% block modal-header %}{% trans "Update Tenant" %}{% endblock %}
 
 {% block modal-body %}
 <div class="left">
