--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_add_user.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_add_user.html
@@ -1,10 +1,25 @@
+{% extends "horizon/common/_modal_form.html" %}
 {% load i18n %}
-<form id="form_add_tenant_user{{ user }}" method="post">
-  {% csrf_token %}
-  {% for hidden in form.hidden_fields %}
-    {{ hidden }}
-  {% endfor %}
-  <input name="user" type="hidden" value="{{ user.id }}" />
-  <input name="tenant" type="hidden" value="{{ tenant_id }}" />
-  <input id="add_tenant_user_{{ user.id }}" class="btn small add" title="User: {{ user.id }}" type="submit" value="{% trans "Add" %}" />
-</form>
+
+{% block form_id %}add_user_form{% endblock %}
+{% block form_action %}{% url horizon:syspanel:tenants:add_user tenant_id user_id %}{% endblock %}
+
+{% block modal_id %}add_user_modal{% endblock %}
+{% block modal-header %}{% trans "Add User To Tenant" %}{% endblock %}
+
+{% block modal-body %}
+<div class="left">
+    <fieldset>
+    {% include "horizon/common/_form_fields.html" %}
+    </fieldset>
+</div>
+<div class="right">
+    <h3>{% trans "Description" %}:</h3>
+    <p>{% trans "Select the user role for the tenant." %}</p>
+</div>
+{% endblock %}
+
+{% block modal-footer %}
+    <input class="btn primary pull-right" type="submit" value="{% trans "Add" %}" />
+    <a href="{% url horizon:syspanel:tenants:users tenant_id %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
+{% endblock %}
