--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/base_usage.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/base_usage.html
@@ -19,7 +19,7 @@
   </div>
 {% endif %}
 
-<form action="" method="get" id="date_form">
+<form action="" method="get" id="date_form" class="form-horizontal">
   <h3>{% trans "Select a month to query its usage" %}: </h3>
   <div class="form-row">
     {{ dateform.month }}
