Reworked all the usage implementations into one standard set.
Adds a base Usage data object, datatables, class-based views,
and more consistent templating for all cases.

Bumps environment version to ensure latest novaclient.

Fixes bug 922353.

Change-Id: Ib2042e9393c8deb0e3ec23403da55a6fb8dd39fb

--- a/horizon/horizon/dashboards/nova/templates/nova/overview/usage.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/overview/usage.html
@@ -7,72 +7,6 @@
 {% endblock page_header %}
 
 {% block dash_main %}
-
-  {% if usage.server_usages %}
-    <div id="usage">
-      <div class="usage_block first">
-        <h3>CPU</h3>
-        <ul>
-          <li><span class="quantity">{{ usage.total_active_vcpus|default:0 }}</span><span class="unit">Cores</span> Active</li>
-          <li><span class="quantity">{{ usage.total_vcpus_usage|floatformat|default:0 }}</span><span class="unit">CPU-HR</span> Used</li>
-        </ul>
-      </div>
-
-      <div class="usage_block">
-        <h3>RAM</h3>
-        <ul>
-          <li><span class="quantity">{{ total_ram|default:0 }}</span><span class="unit">{{ ram_unit }}</span> Active</li>
-        </ul>
-      </div>
-
-      <div class="usage_block last">
-        <h3>Disk</h3>
-        <ul>
-          <li><span class="quantity">{{ usage.total_active_local_gb|default:0 }}</span><span class="unit">GB</span> Active</li>
-          <li><span class="quantity">{{ usage.total_local_gb|floatformat|default:0 }}</span><span class="unit">GB-HR</span> Used</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class='table_title wide'>
-      <a class="csv_download_link pull-right" href="{{ csv_link }}">{% trans "Download CSV" %}</a>
-
-      {% if show_terminated %}
-        <a id="toggle_terminated" href="{{dash_url}}">{% trans "Hide Terminated" %}</a>
-      {% else %}
-        <a id="toggle_terminated" href="{{dash_url}}?show_terminated=True">{% trans "Show Terminated" %}</a>
-      {% endif %}
-
-      <h3>Server Usage Summary</h3>
-    </div>
-
-    <table class="table table-striped table-bordered">
-      <tr id='headings'>
-        <th>{% trans "Name" %}</th>
-        <th>{% trans "Size" %}</th>
-        <th>{% trans "Uptime" %}</th>
-        <th>{% trans "State" %}</th>
-      </tr>
-      <tbody class='main'>
-        {% for instance in instances %}
-          {% if instance.ended_at %}
-            <tr class="terminated">
-          {% else %}
-            <tr class="{% cycle 'odd' 'even' %}">
-          {% endif %}
-            <td>{{ instance.name }}</td>
-            <td>{{ instance.memory_mb|mbformat }} Ram | {{ instance.vcpus }} VCPU | {{ instance.local_gb }}GB Disk</td>
-            <td>{{ instance.uptime_at|timesince }}</td>
-            <td>{{ instance.state|lower|capfirst }}</td>
-        </tr>
-        {% empty %}
-          <tr>
-              <td colspan=9>{% trans "No active instances." %}</td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  {% else %}
-    {% include 'nova/instances_and_volumes/instances/_no_instances.html' %}
-  {% endif %}
+  {% include "horizon/common/_usage_summary.html" %}
+  {{ table.render }}
 {% endblock %}
