Center all multi-select checkboxes
  * fixes bug 923268

Change-Id: Iff480ecb08f783b964b9c6b51a3764ad9d44b52b

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -842,7 +842,9 @@ td.actions_column ul.row_actions.single button:hover {
 }
 
 td.multi_select_column {
-  width: 30px;
+  width: 25px;
+  padding-top: 10px;
+  padding-left: 20px;
   text-align: center;
 }
 
