Adjusting placement of alert action buttons
  * Fixes bug 923269

Change-Id: Icb71b93decbc2fccf2ad24cfccb417f66c97e01d

--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_no_instances.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_no_instances.html
@@ -2,7 +2,7 @@
 
 <div class="alert alert-block alert-info">
   <p><strong>{% trans "Info: " %}</strong>{% trans "There are no instances running. Launch an instance from the Images Page." %}</p>
-  <div class="alert-actions">
+  <div class="alert-actions pull-right">
     <a class="btn small primary" href='{% url horizon:nova:images_and_snapshots:index %}'>{% trans "Images Page" %}</a>
   </div>
 </div>
