Making checkbox padding more flexible (vs. static pixel amounts) Making width of checkbox column consistent, even when no rows are shown
Change-Id: I5eab85d3df908331db45ebec32f9aca770ea77c1

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -846,11 +846,16 @@ td.actions_column ul.row_actions.single button:hover {
   color: black;
 }
 
-td.multi_select_column {
+th.multi_select_column, td.multi_select_column {
   width: 25px;
-  padding-top: 10px;
-  padding-left: 20px;
+}
+
+td.multi_select_column {
   text-align: center;
+}
+
+.table input[type="checkbox"] {
+  display: inline;
 }
 
 div.input input[type="checkbox"] {
