Added spacing in sidebar for nab elements
fixes bug 925900

Change-Id: I1969a0e86d9516ca73f347fe97fb2465e468e3c6

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -302,7 +302,7 @@ small {
     list-style: none;
     width: 222px;
     float: left;
-    margin-bottom: 15px;
+    margin: 10px 0 20px 0;
 }
 
 .main_nav a {
