Slightly imrpoved usability of noVNC console
  * Sort of fixes bug 926338 :/
  * Removed iframe border, it doesn't fit with the rest of the design decisions in horizon.
  * Added a notice above the vnc console about getting console to recognize keyboard input.

Change-Id: I75da0d01cc00ca207940972fbcdf492f3d642b9c

--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
@@ -99,7 +99,8 @@
 
   {% if show_tab == "vnc" %}
   <div id="vnc" class="tab_wrapper">
-    <iframe src="{{vnc_url}}" width="720" height="420"></iframe>
+    <p class='alert alert-info'>If VNC console is not responding to keyboard input: click the grey status bar below.</p>
+    <iframe src="{{vnc_url}}" width="720" height="430"></iframe>
   </div>
   {% endif %}
 
