Re-fixing the horizontal layout of the usage range form.
Change-Id: Ia0601c25ba6bc40d4ae36635b27d322499a6d288

--- a/horizon/horizon/templates/horizon/common/_usage_summary.html
+++ b/horizon/horizon/templates/horizon/common/_usage_summary.html
@@ -1,6 +1,6 @@
 {% load i18n sizeformat %}
 
-<form action="" method="get" id="date_form">
+<form action="" method="get" id="date_form" class="form-horizontal">
   <h3>{% trans "Select a month to query its usage" %}: </h3>
   <div class="form-row">
     {{ form.month }}
