Syspanel instance display corrections.
  * Adds support for the "all_tenants" query parameter to the nova API,
    Fixing bug 914001.
  * Pulls in flavor-correlation code. Fixes bug 927949.
  * Adds unit test for admin instances view.

Change-Id: Iee9c018da02d83f58749141296ec9d618b2335d3

--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/instances/index.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/instances/index.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "Instances" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Instances") %}
+  {% include "horizon/common/_page_header.html" with title=_("All Instances") %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
