Renamed all user-facing cases of "tenant" to "project".
This required a little more refactoring than expected because I
wanted to make the url slug also say "project", which required
changing the panel slug, which in turn required changing the name of
the panel directory, and then it seemed silly not to make the template
directory match.

Fixed bug 909495.

Change-Id: I9da3b544b46f507a223a44c256d0008c8674ab3b

--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
@@ -15,7 +15,7 @@
 </div>
 <div class="right">
     <h3>{% trans "Description:" %}</h3>
-        <p>{% trans "Specify the details for launching an instance. Also please make note of the table below; all tenants have quotas which define the limit of resources they are allowed to provision." %}</p>
+        <p>{% trans "Specify the details for launching an instance. Also please make note of the table below; all projects have quotas which define the limit of resources they are allowed to provision." %}</p>
         <table class="table table-striped table-bordered">
           <tr>
             <th>{% trans "Quota Name" %}</th>
