--- a/horizon/horizon/dashboards/settings/templates/settings/project/settings.html
+++ b/horizon/horizon/dashboards/settings/templates/settings/project/settings.html
@@ -3,9 +3,9 @@
 {% block title %}OpenRC Download{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Tenant Settings") %}
+  {% include "horizon/common/_page_header.html" with title=_("Project Settings") %}
 {% endblock page_header %}
 
 {% block settings_main %}
-  {% include "settings/tenant/_openrc.html" %}
+  {% include "settings/project/_openrc.html" %}
 {% endblock %}
