--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_create.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_create.html
@@ -14,7 +14,7 @@
 </div>
 <div class="right">
     <h3>{% trans "Description" %}:</h3>
-    <p>{% trans "From here you can create a new user and assign them to a tenant (aka project)." %}</p>
+    <p>{% trans "From here you can create a new user and assign them to a project." %}</p>
 </div>
 {% endblock %}
 
