--- a/horizon/horizon/dashboards/settings/templates/settings/project/_openrc.html
+++ b/horizon/horizon/dashboards/settings/templates/settings/project/_openrc.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block form_id %}openrc_download_form{% endblock %}
-{% block form_action %}{% url horizon:settings:tenant:index %}{% endblock %}
+{% block form_action %}{% url horizon:settings:project:index %}{% endblock %}
 
 {% block modal_id %}language_settings_modal{% endblock %}
 {% block modal-header %}{% trans "Download RC File" %}{% endblock %}
@@ -15,12 +15,12 @@
 </div>
 <div class="right">
     <h3>{% trans "Description:" %}</h3>
-    <p>{% trans 'Download the RC file for the selected tenant, then type "source openrc" in the terminal to configure your environment to communicate with OpenStack.' %}</p>
+    <p>{% trans 'Download the RC file for the selected project, then type "source openrc" in the terminal to configure your environment to communicate with OpenStack.' %}</p>
 </div>
 {% endblock %}
 
 {% block modal-footer %}
     <input class="btn primary pull-right" type="submit" value="{% trans "Download RC File" %}" />
-    {% if hide %}<a href="{% url horizon:settings:tenant:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>{% endif %}
+    {% if hide %}<a href="{% url horizon:settings:project:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>{% endif %}
 {% endblock %}
 
