--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/projects/_quotas.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/projects/_quotas.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block form_id %}quota_update_form{% endblock %}
-{% block form_action %}{% url horizon:syspanel:tenants:quotas tenant.id %}{% endblock %}
+{% block form_action %}{% url horizon:syspanel:projects:quotas tenant.id %}{% endblock %}
 
 {% block modal-header %}{% trans "Update Quota" %}{% endblock %}
 
@@ -14,11 +14,11 @@
 </div>
 <div class="right">
     <h3>{% trans "Description" %}:</h3>
-    <p>{% blocktrans with tenant_id=tenant.id %}From here you can edit quotas (max limits) for the tenant {{ tenant_id }}.{% endblocktrans %}</p>
+    <p>{% blocktrans with tenant_id=tenant.id %}From here you can edit quotas (max limits) for the project {{ tenant.name }}.{% endblocktrans %}</p>
 </div>
 {% endblock %}
 
 {% block modal-footer %}
     <input class="btn primary pull-right" type="submit" value="{% trans "Update Quota" %}" />
-  <a href="{% url horizon:syspanel:tenants:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
+  <a href="{% url horizon:syspanel:projects:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
