--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/projects/index.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/projects/index.html
@@ -1,11 +1,11 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
-{% block title %}Tenants{% endblock %}
+{% block title %}Projects{% endblock %}
 
 {% block page_header %}
-  {% url horizon:syspanel:tenants:index as refresh_link %}
+  {% url horizon:syspanel:projects:index as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "horizon/common/_page_header.html" with title=_("Tenants") refresh_link=refresh_link searchable="true" %}
+  {% include "horizon/common/_page_header.html" with title=_("Projects") refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
