--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/projects/users.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/projects/users.html
@@ -1,10 +1,10 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
-{% block title %}Tenant Users{% endblock %}
+{% block title %}Project Users{% endblock %}
 
 {% block page_header %}
   <div class='page-header'>
-    <h2>{% trans "Users for Tenant" %}: <span>{{ tenant.name }}</span></h2>
+    <h2>{% trans "Users for Project" %}: <span>{{ tenant.name }}</span></h2>
   </div>
 {% endblock %}
 
